# StudyShell

./: .env  .env.example  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  README.md  TODO.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.codex/environments/: environment.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ROADMAP.md  architecture.html  overview.html  roadmap.html  style.css
scratch/: check_syntax.py
scripts/: sync-version.mjs
src/: App.tsx  index.css  main.tsx  splitpanes.d.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai_client.rs  filesystem.rs  lib.rs  main.rs  vertex_client.rs  watcher.rs
src/components/: ChatPanel.tsx  CodeEditor.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ContextMenu.tsx  CreationModal.tsx  DropOverlay.tsx  Editor.tsx  ErrorBoundary.tsx  FileTree.tsx  Flashcard.tsx  FlashcardDeck.tsx  FlashcardStudio.tsx  FreeRouterStatus.tsx  ImageViewer.tsx  MarkdownEditor.tsx  MediaViewer.tsx  NotebookViewer.tsx  PdfInkCanvas.tsx  PdfViewer.tsx  QuizView.tsx  SearchPanel.tsx  SettingsView.tsx  ShortcutsModal.tsx  Sidebar.tsx  StudyTimer.tsx  ToastProvider.tsx
src/hooks/: useFileSystem.ts  useFileSystemActions.ts  usePersistentFileLists.ts  useShellLayoutState.ts  useSplitViewState.ts  useStudyAI.ts  useThemePreference.ts  useVertexAI.ts
src/utils/: aiConfig.ts  aiHistory.ts  appPreferences.ts  chatContext.ts  (+22 more)
tests/: types.test.mjs
