[package]
name = "studyshell"
version = "0.2.1"
description = "StudyShell — An intelligent academic operating system"
authors = ["Tom Schneidr"]
edition = "2021"

[lib]
name = "studyshell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [ "image-png", "image-ico", "custom-protocol"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
notify-debouncer-mini = "0.5"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
dotenvy = "0.15"
walkdir = "2"
log = "0.4"
base64 = "0.22"
futures-util = "0.3"
